--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "sass": "^1.81.0",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
         "jquery": "^3.7.1"
     }
 }
